--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -102,7 +102,7 @@ body {
   width: 100%;
   justify-content: center;
   padding: 190px 10px 50px 10px;
-  font-size: 1.1em;
+  
   align-items: center;
   font-style: italic;
   border-bottom: 2px solid $primary-color;
@@ -119,6 +119,7 @@ body {
   
   .descrizione {
     margin-left: 10px;
+    font-size: 1.1em;
   }
 }
 
@@ -201,7 +202,7 @@ section {
 
   .buttons {
     display: flex;
-    width: 55%;
+    width: 65%;
     justify-content: space-around;
   }
 
@@ -229,7 +230,6 @@ footer {
   p {
     width: 40%;
     font-size: 0.6em;
-    text-align: center;
   }
 
   nav {
@@ -335,8 +335,10 @@ footer {
       }
     }
   }
-  footer {
+
+  .footer {
     p {
+    margin-left: 100px;
     font-size: 0.8em;
     margin-right: 300px;
     }
