--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -7,13 +7,13 @@
 body {
   font-style: "Roboto", sans-serif;
   background-color: rgb(30, 30, 30);
-  width: 100vw;
   padding-top: 25px;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 form {
-  margin: 60px 10px;
+  margin: 60px 0px;
   background-color: white;
   border-radius: 15px;
 }
@@ -40,7 +40,7 @@ legend {
 textarea {
   margin-top: 10px;
   padding-left: 5px;
-  max-width: 300px;
+  max-width: 380px;
   min-height: 150px;
 }
 
