--- a/assets/sass/form.scss
+++ b/assets/sass/form.scss
@@ -9,15 +9,14 @@ $primary-color: rgb(30,30,30);
 body {
   font-style: "Roboto", sans-serif;
   background-color:  $primary-color;
-  width: 100vw;
   padding-top: 25px;
   overflow-x: hidden;
+  overflow-y: hidden;
 } 
 
 
-form {
-  
-  margin: 60px 10px;
+form { 
+  margin: 60px 0px;
   background-color: white;
   border-radius: 15px;
 }
@@ -45,7 +44,7 @@ textarea {
   @extend .row;
   margin-top: 10px;
   padding-left: 5px;
-  max-width: 300px;
+  max-width: 380px;
   min-height: 150px;
 }
 
