--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -23,7 +23,7 @@ fieldset {
   flex-direction: column;
   border: 1px solid black;
   box-shadow: 5px 5px 5px black;
-  padding: 15px 30px;
+  padding: 15px 20px;
 }
 
 legend {
@@ -46,4 +46,15 @@ textarea {
 
 .btn {
   margin: 0px 20px 0px 10px;
+}
+
+@media (min-width: 576px) {
+  fieldset {
+    padding: 15px 25px;
+  }
+}
+@media (min-width: 768px) {
+  fieldset {
+    padding: 15px 30px;
+  }
 }/*# sourceMappingURL=form.css.map */
