--- a/assets/sass/form.scss
+++ b/assets/sass/form.scss
@@ -26,7 +26,7 @@ fieldset {
   flex-direction: column;
   border: 1px solid black;
   box-shadow: 5px 5px 5px black;
-  padding: 15px 30px;
+  padding: 15px 20px;
 }
 
 legend {
@@ -54,4 +54,18 @@ textarea {
 
 .btn {
   margin: 0px 20px 0px 10px;
+}
+
+// modifiche per schermi > sm 
+@media (min-width:576px) {
+  fieldset {
+    padding: 15px 25px;
+  }
+}
+
+// modifiche per schermi > md 
+@media (min-width:768px) {
+  fieldset {
+    padding: 15px 30px;
+  }
 }
