--- a/assets/css/curriculum.css
+++ b/assets/css/curriculum.css
@@ -19,12 +19,12 @@ body {
   padding-top: 20px;
 }
 .informazioni-personali .profilo {
-  max-height: 110px;
-  max-width: 140px;
-  padding-left: 20px;
+  max-height: 100px;
+  max-width: 120px;
+  padding-left: 10px;
 }
 .informazioni-personali .generalita h1 {
-  font-size: 1.2em;
+  font-size: 1.3em;
 }
 .informazioni-personali .generalita ul {
   padding-left: 0px;
@@ -36,7 +36,7 @@ body {
   max-width: 12px;
 }
 .informazioni-personali .generalita li span, .informazioni-personali .generalita li a {
-  font-size: 0.8em;
+  font-size: 0.9em;
 }
 .informazioni-personali .generalita li a {
   text-decoration: none;
@@ -95,6 +95,10 @@ body {
     border-radius: 15px;
     border: 1px solid black;
     box-shadow: 5px 5px 5px black;
+  }
+  .informazioni-personali .profilo {
+    max-height: 120px;
+    max-width: 140px;
   }
   .informazioni-personali .generalita h1 {
     font-size: 1.4em;
