--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -202,8 +202,11 @@ footer nav a {
 }
 
 @media (max-width: 576px) {
-  .buttons {
-    width: 80%;
+  .about {
+    align-items: flex-start;
+  }
+  .contatti .buttons {
+    width: 80%; /*had to make it for smartphone, they are smaller than the smallest chrome window on pc*/
   }
 }
 @media (min-width: 769px) {
