--- a/assets/sass/curriculum.scss
+++ b/assets/sass/curriculum.scss
@@ -22,8 +22,8 @@ body {
   padding-top: 20px;
 
   .profilo {
-    max-height: 100px;
-    max-width: 120px;
+    max-height: 90px; /*had to make it for smartphone*/
+    max-width: 110px;
     padding-left: 10px;
   }
 
