--- a/assets/sass/curriculum.scss
+++ b/assets/sass/curriculum.scss
@@ -22,7 +22,7 @@ body {
   padding-top: 20px;
 
   .profilo {
-    max-height: 90px; /*had to make it for smartphone*/
+    max-height: 90px; /*dovuto farlo per gli smartphone*/
     max-width: 110px;
     padding-left: 10px;
   }
