--- a/assets/css/curriculum.css
+++ b/assets/css/curriculum.css
@@ -19,7 +19,7 @@ body {
   padding-top: 20px;
 }
 .informazioni-personali .profilo {
-  max-height: 90px; /*had to make it for smartphone*/
+  max-height: 90px; /*dovuto farlo per gli smartphone*/
   max-width: 110px;
   padding-left: 10px;
 }
