--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -86,7 +86,7 @@ body {
   display: flex;
   width: 100%;
   justify-content: center;
-  padding: 190px 10px 50px 10px;
+  padding: 200px 10px 50px 10px;
   align-items: center;
   font-style: italic;
   border-bottom: 2px solid rgb(35, 35, 35);
@@ -189,7 +189,7 @@ footer {
   border: 2px solid rgb(35, 35, 35);
 }
 footer p {
-  width: 40%;
+  width: 30%;
   font-size: 0.6em;
 }
 footer nav {
@@ -203,6 +203,9 @@ footer nav a {
 }
 
 @media (max-width: 576px) {
+  .header #nome {
+    font-size: 1.7em;
+  }
   .about {
     align-items: flex-start;
   }
