--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -101,7 +101,7 @@ body {
   display: flex;
   width: 100%;
   justify-content: center;
-  padding: 190px 10px 50px 10px;
+  padding: 200px 10px 50px 10px;
   
   align-items: center;
   font-style: italic;
@@ -228,7 +228,7 @@ footer {
   border: 2px solid $primary-color;
 
   p {
-    width: 40%;
+    width: 30%;
     font-size: 0.6em;
   }
 
@@ -247,6 +247,11 @@ footer {
 // modifiche per smartphone 
 @media (max-width: 576px) {
 
+  .header {
+    #nome {
+      font-size: 1.7em;
+    }
+  }
   .about {
     align-items: flex-start;
   }
