cv mobiel layout

--- a/assets/css/curriculum.css
+++ b/assets/css/curriculum.css
@@ -99,4 +99,7 @@ body {
   .informazioni-personali .generalita h1 {
     font-size: 1.4em;
   }
+  .informazioni-personali .generalita li span, .informazioni-personali .generalita li a {
+    font-size: 0.8em;
+  }
 }/*# sourceMappingURL=curriculum.css.map */
