--- a/assets/sass/curriculum.scss
+++ b/assets/sass/curriculum.scss
@@ -132,6 +132,12 @@ body {
       h1 {
         font-size: 1.4em;
       }
+
+      li {
+        span{
+          font-size: 0.8em;
+        }
+      }
     }
   }
 }
