--- a/assets/css/curriculum.css
+++ b/assets/css/curriculum.css
@@ -19,8 +19,8 @@ body {
   padding-top: 20px;
 }
 .informazioni-personali .profilo {
-  max-height: 140px;
-  max-width: 160px;
+  max-height: 120px;
+  max-width: 140px;
   padding-left: 10px;
 }
 .informazioni-personali .generalita h1 {
@@ -36,7 +36,7 @@ body {
   max-width: 12px;
 }
 .informazioni-personali .generalita li span, .informazioni-personali .generalita li a {
-  font-size: 0.6em;
+  font-size: 0.7em;
 }
 .informazioni-personali .generalita li a {
   text-decoration: none;
@@ -95,6 +95,10 @@ body {
     border-radius: 15px;
     border: 1px solid black;
     box-shadow: 5px 5px 5px black;
+  }
+  .informazioni-personali .profilo {
+    max-width: 160px;
+    max-height: 140px;
   }
   .informazioni-personali .generalita h1 {
     font-size: 1.4em;
