--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -26,8 +26,9 @@ fieldset {
 }
 
 legend {
-  font-weight: 500;
+  font-weight: 600;
   font-size: 1.7em;
+  margin-top: 10px;
   margin-bottom: 20px;
   color: rgb(30, 30, 30);
 }
