--- a/assets/sass/form.scss
+++ b/assets/sass/form.scss
@@ -29,8 +29,9 @@ fieldset {
 }
 
 legend {
-  font-weight: 500;
+  font-weight: 600;
   font-size: 1.7em;
+  margin-top: 10px;
   margin-bottom: 20px;
   color: $primary-color;
 }
