Changed some style for the mobile layout

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -206,6 +206,9 @@ footer nav a {
 }
 
 @media (max-width: 576px) {
+  header .nome {
+    font-size: 1.8em;
+  }
   .about {
     align-items: flex-start;
   }
