--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -212,8 +211,12 @@ footer nav a {
   .about {
     align-items: flex-start;
   }
+  .progetti .card img {
+    max-height: 150px;
+    max-width: 150px;
+  }
   .contatti .buttons {
-    width: 80%; /*dovuto farlo per gli smartphone, la finestra piu piccola di chrome su pc è piu grande del classico smartphone*/
+    width: 80%;
   }
   footer {
     justify-content: space-between;
@@ -228,7 +231,24 @@ footer nav a {
     padding: 0px;
   }
 }
-@media (min-width: 769px) {
+@media (max-width: 400px) {
+  header .nome {
+    font-size: 1.6em;
+  }
+  .contatti .buttons {
+    width: 85%;
+  }
+}
+@media (max-width: 350px) {
+  header .nome {
+    font-size: 1.5em;
+  }
+  footer p, footer nav {
+    margin: 0px;
+    min-width: 100px;
+  }
+}
+@media (min-width: 768px) {
   .header {
     display: flex;
     justify-content: space-between;
