form mobile layout corrected

--- a/assets/sass/form.scss
+++ b/assets/sass/form.scss
@@ -18,13 +18,12 @@ form {
   margin: 60px 0px;
   background-color: white;
   border-radius: 15px;
+  box-shadow: 5px 5px 5px black;
 }
 
 fieldset {
   display: flex;
   flex-direction: column;
-  border: 1px solid black;
-  box-shadow: 5px 5px 5px black;
   padding: 15px 20px;
 }
 
@@ -38,10 +37,6 @@ legend {
 
 .row {
   margin-bottom: 20px;
-  
-  label {
-    padding-right: 5px;
-  }
 }
 
 textarea {
@@ -60,6 +55,29 @@ textarea {
   margin: 0px 20px 0px 10px;
 }
 
+
+// modifiche per smartphone piccoli
+@media (max-width:400px) {
+  form {
+    margin: 30px 0px;
+  }
+  fieldset {
+    padding: 10px 10px;
+  }
+}
+// modifiche per smartphone molto piccoli o foldable
+@media (max-width:360px) {
+  main {
+    width: 100% !important;
+  }
+  form {
+    box-shadow: none;
+
+    fieldset {
+      padding: 10px 20px;
+    }
+  }
+}
 // modifiche per schermi > sm 
 @media (min-width:576px) {
   fieldset {
