--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -15,13 +15,12 @@ form {
   margin: 60px 0px;
   background-color: white;
   border-radius: 15px;
+  box-shadow: 5px 5px 5px black;
 }
 
 fieldset {
   display: flex;
   flex-direction: column;
-  border: 1px solid black;
-  box-shadow: 5px 5px 5px black;
   padding: 15px 20px;
 }
 
@@ -36,9 +35,6 @@ legend {
 .row, #radio, textarea {
   margin-bottom: 20px;
 }
-.row label, #radio label, textarea label {
-  padding-right: 5px;
-}
 
 textarea {
   margin-top: 10px;
@@ -51,6 +47,25 @@ textarea {
   margin: 0px 20px 0px 10px;
 }
 
+@media (max-width: 400px) {
+  form {
+    margin: 30px 0px;
+  }
+  fieldset {
+    padding: 10px 10px;
+  }
+}
+@media (max-width: 360px) {
+  main {
+    width: 100% !important;
+  }
+  form {
+    box-shadow: none;
+  }
+  form fieldset {
+    padding: 10px 20px;
+  }
+}
 @media (min-width: 576px) {
   fieldset {
     padding: 15px 25px;
