--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -217,6 +217,10 @@ section {
       padding: 10px;
       text-align: center;
     }
+    
+    .button {
+      margin-bottom: 100px;
+    }
   }
   .card-2 {
     display: none;
