--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -11,6 +11,11 @@ body {
   overflow-x: hidden;
 }
 
+main {
+  width: 93.5%;
+  margin: 0px auto;
+}
+
 form {
   margin: 60px 0px;
   background-color: white;
@@ -32,19 +37,59 @@ legend {
   color: rgb(30, 30, 30);
 }
 
-.row, .btn, #radio, textarea {
+.riga, .radio {
   margin-bottom: 20px;
+  display: flex;
+}
+.riga .etichetta, .radio .etichetta {
+  width: 25.5%;
+}
+.riga .dati, .radio .dati {
+  width: 59.5%;
+  padding-left: 5px;
+}
+
+.radio label {
+  margin-left: 3px;
+  margin-right: 10px;
 }
 
 textarea {
   margin-top: 10px;
+  margin-bottom: 30px;
   padding-left: 5px;
-  max-width: 380px;
+  max-width: 320px;
   min-height: 150px;
 }
 
-.btn {
-  margin: 0px 20px 0px 10px;
+.riga-btn #submit {
+  width: 34%;
+  background-color: rgb(30, 30, 30);
+  color: white;
+  padding: 6px;
+  border: 1px solid rgb(30, 30, 30);
+  border-radius: 5px;
+  margin-right: 20px;
+  font-size: 17px;
+}
+.riga-btn #submit:hover {
+  background-color: rgb(50, 50, 50);
+}
+.riga-btn #submit:active {
+  background-color: rgb(140, 140, 140);
+}
+.riga-btn #reset {
+  width: 34%;
+  background-color: white;
+  border: 1px solid rgb(30, 30, 30);
+  border-radius: 5px;
+  font-size: 17px;
+}
+.riga-btn #reset:hover {
+  border-color: rgb(50, 50, 50);
+}
+.riga-btn #reset:active {
+  border-color: rgb(140, 140, 140);
 }
 
 @media (max-width: 400px) {
@@ -53,26 +98,56 @@ textarea {
     padding: 20px 0px;
   }
   main {
-    width: 100% !important;
+    width: 100%;
   }
   form {
     box-shadow: none;
     border-radius: 0%;
     margin: 10px;
   }
+  textarea {
+    max-width: 290px;
+  }
 }
 @media (max-width: 361px) {
-  .row, textarea, #radio, .btn {
-    font-size: 13px;
+  label, #email, #messaggio {
+    font-size: 15px;
+  }
+  textarea {
+    max-width: 245px;
+  }
+  .riga-btn #reset, .riga-btn #submit {
+    font-size: 15px;
   }
 }
 @media (min-width: 576px) {
+  main {
+    width: 77.5%;
+  }
   fieldset {
     padding: 15px 25px;
   }
 }
 @media (min-width: 768px) {
+  main {
+    width: 59.5%;
+  }
   fieldset {
     padding: 15px 30px;
+  }
+}
+@media (min-width: 992px) {
+  main {
+    width: 51%;
+  }
+}
+@media (min-width: 1200px) {
+  main {
+    width: 42.5%;
+  }
+}
+@media (min-width: 1400px) {
+  main {
+    width: 34%;
   }
 }/*# sourceMappingURL=form.css.map */
