still on the form ad main layout

--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -145,6 +145,9 @@ textarea {
   main {
     width: 42.5%;
   }
+  fieldset {
+    padding: 15px 45px;
+  }
 }
 @media (min-width: 1400px) {
   main {
