--- a/assets/sass/form.scss
+++ b/assets/sass/form.scss
@@ -125,9 +125,9 @@ textarea {
     border-radius: 0%;
     margin: 10px;
   }
-textarea {
-  max-width: 290px;
-}
+  textarea {
+    max-width: 290px;
+  }
 
 }
 
@@ -180,6 +180,9 @@ textarea {
 @media (min-width:1200px) {
   main {
     width: 42.5%;
+  }
+  fieldset {
+    padding: 15px 45px;
   }
 }
 
