--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,7 +13,7 @@ body {
   margin-right: 10px;
   color: white;
   text-decoration: none;
-  padding: 10px;
+  padding: 10px 14px;
   border-radius: 5px;
   font-size: 16px;
 }
@@ -93,6 +93,9 @@ body {
   padding: 15px;
   display: block;
 }
+.menu-link li a:hover {
+  opacity: 0.8;
+}
 
 .header .menu-btn:checked ~ .menu-link {
   max-height: 1000px;
@@ -165,6 +168,7 @@ section h2 {
   width: 60%;
   border: 2px solid gray;
   box-shadow: 5px 5px 5px gray;
+  line-height: 30px;
   padding-bottom: 10px;
 }
 .progetti .card img {
@@ -251,6 +255,9 @@ footer nav a {
   }
 }
 @media (max-width: 361px) {
+  .button {
+    padding: 10px;
+  }
   header .nome {
     font-size: 1.5em;
   }
