--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -18,7 +18,7 @@ body {
   margin-right: 10px;
   color: white;
   text-decoration: none;
-  padding: 10px;
+  padding: 10px 14px;
   border-radius: 5px;
   font-size: 16px;
 }
@@ -108,6 +108,10 @@ body {
     color: $third-color;
     padding: 15px;
     display: block;
+  }
+
+  li a:hover {
+    opacity: 0.8;
   }
 }
 
@@ -210,6 +214,7 @@ section {
     width:60%;
     border: 2px solid gray;
     box-shadow: 5px 5px 5px gray;
+    line-height: 30px;
     padding-bottom: 10px;
 
     img {
@@ -326,6 +331,9 @@ footer {
 
 // modifiche smartphone molto piccoli o foldable
 @media (max-width: 361px) {
+  .button{
+    padding: 10px;
+  }
   header {
     .nome {
       font-size: 1.5em;
