--- a/assets/sass/curriculum.scss
+++ b/assets/sass/curriculum.scss
@@ -16,21 +16,26 @@ body {
   padding: 10px 20px;
   background-color: white;
   margin: auto;
+  width: 100%;
 }
 
 
 .informazioni-personali {
   padding-top: 20px;
+  display: flex;
+  margin-bottom: 20px;
 
   .profilo {
     max-height: 140px;
-    max-width: 160px;
-    padding-left: 10px;
+    max-width: 42%;
+    margin-right: 20px;
   }
 
   .generalita {
+    max-width: 58%;
+    line-height: 20px;
     h1 {
-      font-size: 1.2em;
+      font-size: 19px;
     }
 
     ul {
@@ -44,7 +49,7 @@ body {
         max-width: 12px;
       }
       span {
-        font-size: 0.7em;
+        font-size: 10px;
       }
 
       a {
@@ -56,66 +61,73 @@ body {
   }
 }
 
+// struttura ripetuta per ogni section
 .lavoro {
+  margin-bottom: 20px;
   h2 {
-    font-size: 1.2em;
+    font-size: 17px;
     padding-bottom: 5px;
-    margin-top: 10px;
     border-bottom: 1px solid black;
-    border-width: 50%;
   }
 }
 
-.titolo {
+// struttura ripetuta per lavori ed istruzione
+.esperienza {
   margin-top: 10px;
-  h3 {
-    font-size: 1em;
+  display: flex;
+  justify-content: space-between;
+
+  .titolo {
+    font-size: 15px;
+    max-width: 66%;
   }
 
-  p {
-    font-size: 0.9em;
+  .data {
+    font-size: 13px;
+    max-width: 34%;
   }
+}
+
+.descrizione {
+  font-size: 13px;
+  max-width: 90%;
 }
 
 .istruzione {
   @extend .lavoro;
-  @extend .titolo;
 }
 
+// sezione hard skills
 .competenze {
   @extend .lavoro;
 
-  div {
-    margin-left:20px;
+  .lista {
+    display: flex;
+    
+    ul {
+      width: 50%;
 
-    li {
-      font-size: 0.9em;
-      list-style-type: square;
+      li {
+        list-style-type: square;
+        font-size: 13px;
+      }
     }
   }
 }
 
+// sezione competenze linguistiche
 .lingue {
-  h2 {
-    font-size: 1.2em;
-    padding-bottom: 5px;
-    margin-top: 10px;
-  }
+  @extend .lavoro;
 
-  th {
-    font-size: 14px;
-  }
-  td {
-    font-size: 14px;
-  }
-  
+  th, td {
+    font-size: 13px;
+  } 
 }
 
 .autorizzazione {
   margin-top: 40px;
   p {
-    width: 50%;
-    font-size: 0.6em;
+    font-size: 8px;
   }
 }
 
@@ -125,11 +137,47 @@ body {
   .informazioni-personali {
     .profilo {
       max-height: 120px;
-      max-width: 140px;
     }
-    .generalita li {
-      font-size: 0.8em;
+    .generalita {
+      line-height: 15px;
+      h1 {
+        font-size: 18px;
+      }
+      li span {
+        font-size: 9px;
+      }
     }
+  }
+
+  .lavoro h2 {
+    font-size: 16px;
+  }
+  
+  .esperienza {
+    .titolo {
+      font-size: 14px;
+    }
+    .data {
+      font-size: 12px;
+    }
+  }
+
+  .descrizione {
+    font-size: 12px;
+  }
+
+  .competenze .lista ul li {
+    font-size: 12px;
+  }
+
+  .lingue {
+    th, td{
+      font-size: 12px;
+    }
+  }
+
+  .autorizzazione p{
+    font-size: 7px;
   }
 }
 
@@ -138,11 +186,46 @@ body {
   .informazioni-personali {
     .profilo {
       max-height: 110px;
-      max-width: 130px;
     }
-    .generalita li {
-      font-size: 0.7em;
+    .generalita {
+      h1 {
+        font-size: 15px;
+      }
+      li span {
+        font-size: 8px;
+      }
     }
+  }
+
+  .lavoro h2 {
+    font-size: 13px;
+  }
+  
+  .esperienza {
+    .titolo {
+      font-size: 11px;
+    }
+    .data {
+      font-size: 9px;
+    }
+  }
+
+  .descrizione {
+    font-size: 9px;
+  }
+
+  .competenze .lista ul li {
+    font-size: 9px;
+  }
+
+  .lingue {
+    th, td{
+      font-size: 9px;
+    }
+  }
+
+  .autorizzazione p{
+    font-size: 7px;
   }
 }
 
@@ -153,19 +236,78 @@ body {
     border-radius: 15px;
     border: 1px solid black;
     box-shadow: 5px 5px 5px black;
+    width: 91%;
   }
 
   .informazioni-personali {
     .generalita {
+      line-height: 22px;
       h1 {
-        font-size: 1.4em;
+        font-size: 22px;
       }
-
-      li {
-        span{
-          font-size: 0.8em;
-        }
+      li span {
+        font-size: 13px;
       }
     }
+  }
+
+  .lavoro h2 {
+    font-size: 19px;
+  }
+  
+  .esperienza {
+    .titolo {
+      font-size: 17px;
+    }
+    .data {
+      font-size: 15px;
+    }
+  }
+
+  .descrizione {
+    font-size: 15px;
+  }
+
+  .competenze .lista ul li {
+    font-size: 15px;
+  }
+
+  .lingue {
+    th, td{
+      font-size: 15px;
+    }
+  }
+
+  .autorizzazione p{
+    font-size: 10px;
+  }
+}
+
+
+// modifiche per schermi > md
+@media (min-width:768px) {
+  .cv {
+    width: 75%;
+  }
+}
+
+// modifiche per schermi > lg 
+@media (min-width:992px) {
+  .cv {
+    width: 58%;
+  }
+}
+
+// modifiche per schermi > xl 
+@media (min-width:1200px) {
+  .cv {
+    width: 50%;
+  }
+}
+
+// modifiche per schermi > xxl 
+@media (min-width:1400px) {
+  .cv {
+    width: 41%;
   }
 }
