--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,13 +7,16 @@
 body {
   font-family: "Roboto", sans-serif;
 }
+body p, body .skills-livello span, .skills-livello body span {
+  font-size: 16px;
+}
 
 .button {
   background-color: rgb(35, 35, 35);
   margin-right: 10px;
   color: white;
   text-decoration: none;
-  padding: 10px 14px;
+  padding: 8px 12px;
   border-radius: 5px;
   font-size: 16px;
 }
@@ -35,7 +38,7 @@ body {
 }
 
 .nome {
-  font-size: 2em;
+  font-size: 30px;
   padding-left: 10px;
   float: left;
   font-weight: 400;
@@ -107,17 +110,14 @@ body {
 
 .about {
   display: flex;
-  width: 100%;
   justify-content: center;
-  padding: 200px 10px 50px 10px;
   align-items: center;
-  font-style: italic;
+  padding: 200px 10px 50px 10px;
   border-bottom: 2px solid rgb(35, 35, 35);
 }
 .about .foto-profilo {
   max-width: 30%;
   max-height: 30%;
-  float: left;
   margin-right: 5px;
   border-radius: 50%;
   border: 1px solid gray;
@@ -125,7 +125,13 @@ body {
 }
 .about .descrizione {
   margin-left: 10px;
-  font-size: 1em;
+  font-style: italic;
+}
+
+section h2 {
+  text-align: center;
+  padding-bottom: 30px;
+  font-size: 25px;
 }
 
 .skills, .contatti, .progetti {
@@ -138,9 +144,6 @@ body {
 
 .skills-livello {
   width: 90%;
-}
-.skills-livello span {
-  font-size: 0.9em;
 }
 .skills-livello .progress {
   margin-bottom: 10px;
@@ -155,11 +158,6 @@ body {
 .skills-livello .progress #bootstrap, .skills-livello .progress #github, .skills-livello .progress #sass {
   width: 50%;
 }
-section h2 {
-  text-align: center;
-  padding-bottom: 30px;
-}
-
 .progetti .tutte-cards {
   display: flex;
   justify-content: center;
@@ -170,12 +168,16 @@ section h2 {
   box-shadow: 5px 5px 5px gray;
   line-height: 30px;
   padding-bottom: 10px;
+  line-height: 25px;
 }
 .progetti .card img {
-  max-width: 200px;
-  max-height: 200px;
+  max-width: 150px;
+  max-height: 150px;
   padding: 10px;
   text-align: center;
+}
+.progetti .card-body h3 {
+  font-size: 20px;
 }
 .progetti .card-2 {
   display: none;
@@ -185,92 +187,83 @@ section h2 {
   border-bottom: none;
   min-height: 300px;
 }
-.contatti p {
+.contatti p, .contatti .skills-livello span, .skills-livello .contatti span {
   margin-bottom: 30px;
+  width: 80%;
   text-align: center;
 }
 .contatti .nav-buttons {
   display: flex;
-  width: 65%;
+  width: 55%;
   justify-content: space-around;
 }
 
 footer {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   padding: 50px 0px 25px 0px;
-  min-width: 100%;
   background-color: rgb(35, 35, 35);
   color: white;
   border: 2px solid rgb(35, 35, 35);
 }
-footer p {
+footer p, footer .skills-livello span, .skills-livello footer span {
   width: 30%;
-  font-size: 0.6em;
+  font-size: 11px;
+  margin-left: 30px;
 }
 footer nav {
   margin: 0px 30px 20px 0px;
-  max-width: 20%;
-  max-height: 10%;
 }
 footer nav a {
-  padding: 5px;
+  padding: 0px;
   text-decoration: none;
 }
 
-@media (max-width: 576px) {
-  header .nome {
-    font-size: 1.8em;
-  }
-  .about {
-    align-items: flex-start;
-  }
-  .progetti .card img {
-    max-height: 150px;
-    max-width: 150px;
-  }
-  .contatti .nav-buttons {
-    width: 80%;
-  }
-  footer {
-    justify-content: space-between;
-  }
-  footer p {
-    margin-left: 20px;
-  }
-  footer nav {
-    margin-right: 20px;
-  }
-  footer nav a {
-    padding: 0px;
-  }
-}
 @media (max-width: 400px) {
-  header .nome {
-    font-size: 1.6em;
+  body p, body .skills-livello span, .skills-livello body span {
+    font-size: 15px;
   }
-  .contatti .nav-buttons {
-    width: 85%;
+  .button {
+    font-size: 15px;
+  }
+  header .nome {
+    font-size: 27px;
+  }
+  section h2 {
+    font-size: 22px;
+  }
+  footer p, footer .skills-livello span, .skills-livello footer span {
+    font-size: 10px;
   }
 }
 @media (max-width: 361px) {
-  .button {
-    padding: 10px;
-  }
   header .nome {
-    font-size: 1.5em;
+    font-size: 24px;
   }
-  footer p, footer nav {
-    margin: 0px;
-    min-width: 100px;
+  .about p, .about .skills-livello span, .skills-livello .about span {
+    font-size: 14px;
+  }
+  footer p, footer .skills-livello span, .skills-livello footer span {
+    font-size: 9px;
   }
 }
 @media (min-width: 768px) {
+  .button {
+    padding: 10px 14px;
+    font-size: 17px;
+  }
+  body p, body .skills-livello span, .skills-livello body span {
+    font-size: 17px;
+  }
   .header {
     display: flex;
     justify-content: space-between;
     position: static;
+    align-items: center;
+  }
+  .header .nome {
+    font-size: 33px;
   }
   .header .menu-icon {
     display: none;
@@ -286,100 +279,120 @@ footer nav a {
   .core .about {
     padding: 50px 0px;
   }
-  .core .about .descrizione p {
-    font-size: 1.2em;
+  .core .about p, .core .about .skills-livello span, .skills-livello .core .about span {
+    font-size: 18px;
+  }
+  .core .card {
+    line-height: 30px;
   }
   .core section h2 {
-    font-size: 1.7em;
-  }
-  .core .skills span, .core .progetti span, .core .contatti span {
-    font-size: 1em;
+    font-size: 27px;
   }
   .core .card-2 {
     display: block;
     margin-left: 40px;
   }
-  .core .contatti p {
-    font-size: 1.1em;
+  .core .contatti .nav-buttons {
+    width: 65%;
   }
-  footer p {
-    font-size: 0.7em;
+  footer {
+    justify-content: space-around;
+  }
+  footer p, footer .skills-livello span, .skills-livello footer span {
+    font-size: 12px;
+    margin-left: 0px;
+  }
+  footer nav {
+    margin-right: 0px;
   }
 }
 @media (min-width: 993px) {
+  .button {
+    font-size: 18px;
+  }
+  body p, body .skills-livello span, .skills-livello body span {
+    font-size: 18px;
+  }
   .header {
     padding-left: 40px;
     padding-right: 40px;
   }
   .header .nome {
-    font-size: 2.2em;
+    font-size: 36px;
   }
-  .header a {
-    font-size: 1.1em;
+  .header li a {
+    font-size: 18px;
   }
   .core {
     display: block;
     max-width: 70%;
   }
-  .core .about .descrizione p {
-    font-size: 1.3em;
+  .core .about p, .core .about .skills-livello span, .skills-livello .core .about span {
+    font-size: 20px;
   }
   .core section h2 {
-    font-size: 1.8em;
+    font-size: 28px;
   }
-  .core .skills span, .core .progetti span, .core .contatti span {
-    font-size: 1.1em;
+  .core .card img {
+    max-width: 200px;
+    max-height: 200px;
   }
-  .core .contatti p {
-    font-size: 1.2em;
-  }
-  .core .contatti a {
-    font-size: 1.2em;
-  }
-  .footer p {
+  footer p, footer .skills-livello span, .skills-livello footer span {
     margin-left: 100px;
-    font-size: 0.8em;
     margin-right: 300px;
+    font-size: 13px;
   }
-  .footer nav {
+  footer nav {
     margin-right: 100px;
+  }
+  footer nav a {
+    margin: 5px;
   }
 }
 @media (min-width: 1201px) {
+  .button {
+    font-size: 19px;
+  }
+  body p, body .skills-livello span, .skills-livello body span {
+    font-size: 19px;
+  }
   .header {
     padding-left: 60px;
     padding-right: 60px;
   }
   .header .nome {
-    font-size: 2.4em;
+    font-size: 39px;
   }
-  .header a {
-    font-size: 1.2em;
+  .header li a {
+    font-size: 19px;
   }
   .core {
     display: block;
     max-width: 60%;
   }
-  .core .about .descrizione p {
-    font-size: 1.5em;
+  .core .about p, .core .about .skills-livello span, .skills-livello .core .about span {
+    font-size: 22px;
   }
   .core section h2 {
-    font-size: 1.9em;
+    font-size: 29px;
   }
-  .core .skills span, .core .progetti span, .core .contatti span {
-    font-size: 1.2em;
-  }
-  .core .contatti p {
-    font-size: 1.3em;
+  .core .card {
+    line-height: 35px;
   }
   .core .contatti .nav-buttons {
-    width: 48%;
+    width: 50%;
   }
-  footer p {
-    font-size: 0.9em;
+  footer p, footer .skills-livello span, .skills-livello footer span {
+    font-size: 14px;
     margin-right: 450px;
   }
   footer nav {
     margin-right: 150px;
+  }
+}
+@media (min-width: 1400px) {
+  .about img {
+    max-width: 25%;
+    max-height: 25%;
   }
 }/*# sourceMappingURL=main.css.map */
